--- a/package.json
+++ b/package.json
@@ -1,18 +1,30 @@
 {
-  "name": "stream-audio-in",
-  "version": "1.0.0",
+  "name": "pcm-server",
+  "version": "2.0.0",
   "description": "",
   "main": "server.js",
   "scripts": {
     "start": "node ./server.js",
     "start-mon": "nodemon ./server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "npm run getsox && pkg package.json",
+    "custom": "node ./server.js -p 3012 -l 10 -c 2 -b 24 -e signed-integer",
+    "bin": "./compiled/pcm-server -p 3012 -l 10 -c 2 -b 24 -e signed-integer",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "getsox": "mkdir .tmp && cd .tmp && wget https://pilotfiber.dl.sourceforge.net/project/sox/sox/14.4.2/sox-14.4.2-macosx.zip -O s.zip && unzip s.zip && cd $(ls -d */|head -n 1) && mv sox ../../server/sox && rm -Rf ../../.tmp"
+  },
+  "bin": {
+    "pcm-server": "./server.js"
+  },
+  "pkg": {
+    "assets": [ "client/**/*", "server/sox" ],
+    "targets": [ "node18-macos-x64" ],
+    "outputPath": "compiled"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "ws": "^8.8.1"
+    "ws": "^8.8.1",
+    "yargs": "^17.6.2"
   }
 }
