--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
   "scripts": {
     "start": "node ./server.js",
     "start-mon": "nodemon ./server.js",
-    "build": "npm run getsox && pkg package.json",
+    "build": "pkg package.json",
     "custom": "node ./server.js -p 3012 -l 10 -c 2 -b 24 -e signed-integer",
     "bin": "./compiled/pcm-server -p 3012 -l 10 -c 2 -b 24 -e signed-integer",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "getsox": "mkdir .tmp && cd .tmp && wget https://pilotfiber.dl.sourceforge.net/project/sox/sox/14.4.2/sox-14.4.2-macosx.zip -O s.zip && unzip s.zip && cd $(ls -d */|head -n 1) && mv sox ../../server/sox && rm -Rf ../../.tmp"
+    "getsox": "mkdir .tmp && cd .tmp && wget https://pilotfiber.dl.sourceforge.net/project/sox/sox/14.4.2/sox-14.4.2-macosx.zip -O s.zip && unzip s.zip && cd $(ls -d */|head -n 1) && mv sox ../../sox && rm -Rf ../../.tmp"
   },
   "bin": {
     "pcm-server": "./server.js"
