--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.1",
+    "nosleep.js": "^0.12.0",
     "plist": "^3.0.6",
     "ws": "^8.8.1",
     "yargs": "^17.6.2"
